--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,9 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-tests
-results
-models
+# tests
+# results
+# models
 projects/Nome_Chatbot_1/config.yml
 projects/Nome_Chatbot_2/config.yml
 
