--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,9 @@ __pycache__/
 
 # tests
 # results
-# models
-projects/Nome_Chatbot_1/config.yml
-projects/Nome_Chatbot_2/config.yml
+# projects/Nome_Chatbot_1/config.yml
+# projects/Nome_Chatbot_2/config.yml
+models
 
 # C extensions
 *.so
