--- a/config.yml
+++ b/config.yml
@@ -19,11 +19,13 @@ pipeline:
   - name: SpacyEntityExtractor
   - name: EntitySynonymMapper
   - name: DIETClassifier
-    epochs: 100
+    epochs: 200
     model_confidence: softmax
     constrain_similarities: true
     ranking_length: 5
     use_masked_language_model: True
+    tensorboard_log_directory: ".tensorboard_diet"
+    tensorboard_log_level: "epoch"
   - name: FallbackClassifier
     threshold: 0.6
     ambiguity_threshold: 0.1
@@ -33,12 +35,14 @@ policies:
   - name: MemoizationPolicy
   - name: TEDPolicy
     max_history: 5
-    epochs: 100
+    epochs: 200
     constrain_similarities: true
   - name: RulePolicy
     check_for_contradictions: true
     core_fallback_threshold: 0.05
     enable_fallback_prediction: true
+    tensorboard_log_directory: ".tensorboard_ted"
+    tensorboard_log_level: "epoch"
   
 # # See https://rasa.com/docs/rasa/training-data-importers/ for more information.    
 importers:
